[package]
name = "DHT"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.52", features = [
    "kad",            # Kademlia DHT
    "mdns",           # Local peer discovery
    "tcp",            # TCP transport
    "dns",            # DNS transport support
    "noise",          # Encrypted peer-to-peer communication
    "websocket",      # Optional, useful for browser-based integrations
    "yamux",          # Stream multiplexer
    "async-std",      # Executor compatibility
    "macros"
] }
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"